@@ -1,4 +1,68 @@
+plugins {
+    id 'java'
+    id 'org.jetbrains.intellij' version '1.3.1'
+    id 'distribution'
+}
+
+
 apply from: 'config.gradle'
+
+group 'com.xiaobaicai.plugin'
+version "$rootProject.ext.plugin.version"
+sourceCompatibility = 1.8
+
+
+
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation project(":plugin-core")
+    implementation rootProject.ext.dependencies["hutool-all"]
+    annotationProcessor rootProject.ext.dependencies["lombok"]
+    compileOnly rootProject.ext.dependencies["lombok"]
+    testAnnotationProcessor rootProject.ext.dependencies["lombok"]
+    testCompileOnly rootProject.ext.dependencies["lombok"]
+}
+
+
+// See https://github.com/JetBrains/gradle-intellij-plugin/
+intellij {
+    version = '2021.1.3'
+    plugins = ['java']
+    type.set("IU")
+    localPath.set("/Applications/IntelliJ IDEA.app")
+    tasks {
+        "buildSearchableOptions" {
+            enabled = false
+        }
+    }
+}
+
+patchPluginXml {
+    patchPluginXml {
+        sinceBuild.set("201.1")
+        untilBuild.set("")
+    }
+}
+
+publishPlugin {
+    token = System.getenv("pluginToken")
+}
+
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
+
+test {
+    useJUnitPlatform()
+}
+
+
+
 //所有项目配置
 allprojects {
     group 'com.xiaobaicai.plugin'
@@ -45,5 +109,5 @@ tasks.withType(Javadoc) {
 
 task packAllTwice() {
     dependsOn(':plugin-agent:packAgent')
-    dependsOn(':plugin-app:assemble')
+    dependsOn(':assemble')
 }
